# gitops_praq

./: .gitignore  Makefile  README.md  apuntes.md  pyproject.toml
.github/workflows/: ci_cd.yaml
docker/: Dockerfile  docker-compose-test.yaml
k8s/production/: argocd-app.yaml  deployment.yaml
src/: main.py
tests/unit/: test_generate_fake_df.py
