[project]
name = "gitops-praq"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["polars>=1.33.1"]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"
